# COMP-685-Fall-2025

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: ERA5.ipynb  ERA5_Ai2_Climate_Emulator.ipynb  ERA5_Ai2_Climate_Emulator_Greg.ipynb  House Sales in King County.ipynb  Spatio-temporal datasets.ipynb  iNaturalist + ERA5.ipynb  iNaturalist + ERA5_greg.ipynb  iNaturalist-Greg.ipynb  iNaturalist.ipynb  import_tests.ipynb  kc_house_karan.ipynb  openaq_clean.csv
src/: README.md
src/data/: download_era5.py
