[project]
name = "comp-685-fall-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=1.6.14",
    "ebird-api>=4.0.0",
    "landsatxplore>=0.15.0",
    "lightning>=2.5.5",
    "pygbif>=0.6.5",
    "pyinaturalist>=0.20.2",
    "rasterio>=1.4.3",
    "torchgeo>=0.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
