[project]
name = "comp-685-fall-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "earthengine-api>=1.6.14",
    "ebird-api>=4.0.0",
    "huggingface-hub>=1.0.1",
    "landsatxplore>=0.15.0",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python-headless>=4.11.0.86",
    "pygbif>=0.6.5",
    "pyinaturalist>=0.20.2",
    "pyyaml>=6.0.3",
    "rasterio>=1.4.3",
    "torch>=2.9.0",
    "torchgeo>=0.7.1",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
